--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ exceptiongroup==1.3.0
 fastapi==0.116.1
 h11==0.16.0
 idna==3.10
-numpy==1.24.4
+numpy>=1.26.0
 pandas==2.0.3
 pydantic==2.10.6
 pydantic-core==2.27.2
