--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,3 @@
-annotated-types==0.7.0
-anyio==4.5.2
-click==8.1.8
-exceptiongroup==1.3.0
-fastapi==0.116.1
-h11==0.16.0
-idna==3.10
-numpy>=1.26.0
-pandas==2.0.3
-pydantic==2.10.6
-pydantic-core==2.27.2
-python-dateutil==2.9.0.post0
-pytz==2025.2
-six==1.17.0
-sniffio==1.3.1
-starlette==0.44.0
-typing-extensions==4.13.2
-tzdata==2025.2
-uvicorn==0.33.0
+fastapi
+uvicorn[standard]
+pydantic
